--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -8,7 +8,7 @@
         instance_type: t2.micro
         image: ami-0b0dcb5067f052a63
         region: us-east-1
-        key_name: devops
+        key_name: devops1
         vpc_subnet_id: subnet-0497e641483546004
         count: 1
         assign_public_ip: yes
